k8s/bessatech-financial-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-bessatech-financial-frontend
spec:
  selector:
    name: deployment-bessatech-financial-frontend
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-bessatech-financial-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: deployment-bessatech-financial-frontend
  template:
    metadata:
      labels:
        name: deployment-bessatech-financial-frontend
    spec:
      containers:
      - name: bessatech-financial-frontend
        image: gabrielbessadev/bessatech-financial-frontend:0.0.1-SNAPSHOT
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
