k8s/bessatech-financial-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-bessatech-financial-service
spec:
  selector:
    name: deployment-bessatech-financial-service
  ports:
    - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-bessatech-financial-service
spec:
  replicas: 1
  selector:
    matchLabels:
      name: deployment-bessatech-financial-service
  template:
    metadata:
      labels:
        name: deployment-bessatech-financial-service
    spec:
      containers:
        - name: bessatech-financial-service
          image: gabrielbessadev/bessatech-financial-service:0.0.1-SNAPSHOT
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
