k8s/mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-notify-mongo
spec:
  serviceName: service-notify-mongo
  replicas: 1
  selector:
    matchLabels:
      name: statefulset-notify-mongo
  template:
    metadata:
      labels:
        name: statefulset-notify-mongo
        selector: statefulset-notify-mongo
    spec:
      containers:
      - name: notify-mongo
        image: mongo:5.0
        imagePullPolicy: "IfNotPresent"
        ports:
          - containerPort: 27017
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
        - name: notify-mongodb-data
          persistentVolumeClaim:
            claimName: notify-mongodb-data
---
apiVersion: v1
kind: Service
metadata:
  name: service-notify-mongo
spec:
  selector:
    name: statefulset-notify-mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  type: ClusterIP
