k8s/notify-schedule.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-notify-schedule
spec:
  selector:
    name: deployment-notify-schedule
  ports:
    - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-notify-schedule
spec:
  replicas: 1
  selector:
    matchLabels:
      name: deployment-notify-schedule
  template:
    metadata:
      labels:
        name: deployment-notify-schedule
    spec:
      containers:
        - name: notify-schedule
          image: gabrielbessadev/notify-schedule:0.0.1-SNAPSHOT
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "400Mi"
              cpu: "100m"
            limits:
              memory: "6000Mi"
              cpu: "300m"
