k8s/notify-socket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-notify-socket-service
spec:
  selector:
    name: deployment-notify-socket-service
  ports:
    - port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-notify-socket-service
spec:
  replicas: 1
  selector:
    matchLabels:
      name: deployment-notify-socket-service
  template:
    metadata:
      labels:
        name: deployment-notify-socket-service
    spec:
      containers:
        - name: notify-socket-service
          image: gabrielbessadev/notify-socket-service:0.0.1-SNAPSHOT
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "50Mi"
              cpu: "100m"
            limits:
              memory: "100Mi"
              cpu: "300m"
