k8s/redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-notify-redis
spec:
  serviceName: service-notify-redis
  replicas: 1
  selector:
    matchLabels:
      name: statefulset-notify-redis
  template:
    metadata:
      labels:
        name: statefulset-notify-redis
        selector: statefulset-notify-redis
    spec:
      containers:
      - name: db-redis
        image: redis:5-alpine
        imagePullPolicy: "IfNotPresent"
        ports:
          - containerPort: 6379
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
        - name: notify-redis-data
          persistentVolumeClaim:
            claimName: notify-redis-data
---
apiVersion: v1
kind: Service
metadata:
  name: service-notify-redis
spec:
  selector:
    name: statefulset-notify-redis
  ports:
    - name: redis
      port: 6379
