k8s/grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - cluster.com.br
  rules:
    - host: cluster.com.br
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
